--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "dev": "nodemon --ext ts --exec tsx src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc",
+    "dev": "nodemon --ext ts --exec tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
+  },
+  "engines": {
+    "node": "20.x"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +41,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -60,8 +64,6 @@
     "prettier": "^3.5.1",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0"
+    "tsx": "^4.19.3"
   }
 }
