--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate"
   },
+
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
+
   "engines": {
     "node": "20.x"
   },
@@ -20,7 +28,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.11.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
