--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev",
-    "postinstall": "prisma generate"
+    "format": "prettier --write ."
   },
 
   "prisma": {
