--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
-
   "prisma": {
     "schema": "src/prisma/schema.prisma"
   },
-
   "engines": {
     "node": "20.x"
   },
@@ -47,6 +45,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
+    "resend": "^4.7.0",
     "typescript": "^5.7.3",
     "uuid": "^11.1.0"
   },
