--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-list-endpoints": "^7.1.1",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
@@ -59,6 +60,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
+    "@types/socket.io": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
@@ -68,6 +70,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "prisma": "^6.9.0",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3"
   }
