--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "allowJs": true,                    // Allows JavaScript files to be compiled
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["node"]
+    "types": ["node"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },                // Allows default imports from modules with no default export
   "ts-node": {
     "esm": true,
