--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
+    "start": "node ./dist/index.js",
     "dev": "nodemon --ext ts --exec tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
