--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
     "resend": "^4.7.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
     "uuid": "^11.1.0"
   },
