--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start": "node ./dist/index.js",
@@ -13,7 +13,10 @@
     "format": "prettier --write .",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-    "db:push": "prisma push"
+    "db:push": "prisma push",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset && npm run seed",
+    "db:seed": "prisma db seed"
   },
   "engines": {
     "node": "20.x"
