--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
     "resend": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.7.3",
     "uuid": "^11.1.0"
   },
@@ -68,6 +70,8 @@
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
     "@types/socket.io": "^3.0.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
