--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "db:seed": "prisma db seed"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
   },
   "engines": {
     "node": "20.x"
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
