--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "knex": "^3.1.0",
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.2",
+    "node-appwrite": "^20.3.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
